--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   width: 1440px;
   font-size: 16px;
   font-style: normal;
+  line-height: 1.5;
 }
 
 .no-list {
@@ -35,7 +36,7 @@ body {
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  line-height: 21px;
+  line-height: 1.17;
 }
 
 .logo span {
@@ -86,7 +87,9 @@ body {
   background-color: var(--title-text-color);
 }
 .hero-title {
+  font-size: 56px;
   color: var(--main-white-color);
+  line-height: 1.07;
 }
 
 /* Кнопка */
@@ -128,12 +131,14 @@ body {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
+  line-height: 1.11;
 }
 
 .advantages-list .title {
   color: var(--title-text-color);
   font-size: 20px;
   font-weight: 500;
+  line-height: 1.2;
 }
 .advantages-list > li {
   display: inline-block;
@@ -147,6 +152,7 @@ body {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 20px;
+  line-height: 1.2;
 }
 
 .team > li {
@@ -155,6 +161,13 @@ body {
 
 .button-list > li {
   display: inline-block;
+}
+
+.portfplio-list .portfolio-name {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
 /* Футер */
