--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ body {
 
 /* Авторизація */
 .contacts {
-  text-decoration: none;
+  font-style: normal;
 }
 
 .contact-menu {
@@ -164,6 +164,7 @@ body {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 .advantages-list > li {
   display: inline-block;
@@ -173,22 +174,35 @@ body {
   display: inline-block;
 }
 
-.team .name {
+.team {
+  background-color: var(--logo-footer);
+}
+
+.teammates .name {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
-.team > li {
+.teammates > li {
   display: inline-block;
+}
+
+.team-list {
+  background-color: var(--main-white-color);
+}
+
+.paragraph {
+  font-size: 16px;
 }
 
 .button-list > li {
   display: inline-block;
 }
 
-.portfplio-list .portfolio-name {
+.portfolio-list .portfolio-name {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 20px;
