--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.logo span {
+.logo-header {
   color: var(--title-text-color);
 }
 
@@ -211,6 +211,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 /* Футер */
