--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,9 @@ body {
   text-decoration: none;
   margin: 0 20px 0 20px;
   font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .site-nav > li {
@@ -101,6 +104,7 @@ body {
   color: var(--main-white-color);
   line-height: 1.07;
   text-align: center;
+  letter-spacing: 0.02em;
 }
 
 /* Кнопка */
@@ -116,6 +120,9 @@ body {
   border: 0;
   cursor: pointer;
   letter-spacing: 0.04em;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .button:hover,
@@ -133,6 +140,9 @@ body {
   border: 0;
   cursor: pointer;
   letter-spacing: 0.04em;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .button-port:hover,
@@ -148,6 +158,7 @@ body {
   font-size: 36px;
   line-height: 1.11;
   text-transform: capitalize;
+  letter-spacing: 0.02em;
   text-align: center;
 }
 
@@ -156,6 +167,7 @@ body {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 .advantages-list > li {
   display: inline-block;
@@ -174,6 +186,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .teammates > li {
@@ -185,6 +198,7 @@ body {
 }
 
 .paragraph {
+  font-size: 16px;
   color: var(--primery-text-color);
 }
 
@@ -197,6 +211,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 /* Футер */
