--- a/css/styles.css
+++ b/css/styles.css
@@ -80,9 +80,12 @@ body {
 }
 
 .contact-menu {
-  color: var(--primery-text-color);
   font-style: normal;
-  margin: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
+  text-decoration: none;
 }
 
 .contact-menu:hover,
@@ -90,8 +93,8 @@ body {
   color: var(--hover-color);
 }
 
-.auth-nav > li {
-  display: inline-block;
+.contacts-list {
+  display: flex;
 }
 
 /* Герой */
