--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,6 @@ body {
   text-decoration: none;
   margin: 0 20px 0 20px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 
 .main-menu:hover,
@@ -74,9 +71,6 @@ body {
 
 .contact-menu {
   font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--primery-text-color);
   text-decoration: none;
 }
@@ -96,7 +90,6 @@ body {
   color: var(--main-white-color);
   line-height: 1.07;
   text-align: center;
-  letter-spacing: 0.02em;
 }
 
 /* Кнопка */
@@ -107,9 +100,7 @@ body {
   height: 56px;
   background: var(--accent-color);
   letter-spacing: 0.04em;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  cursor: pointer;
 }
 
 .button:hover,
@@ -122,9 +113,7 @@ body {
   font-weight: 500;
   background: var(--logo-footer);
   letter-spacing: 0.04em;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  cursor: pointer;
 }
 
 .button-port:hover,
@@ -140,7 +129,6 @@ body {
   font-size: 36px;
   line-height: 1.11;
   text-transform: capitalize;
-  letter-spacing: 0.02em;
   text-align: center;
 }
 
@@ -149,7 +137,6 @@ body {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.02em;
 }
 
 .team {
@@ -161,16 +148,10 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em;
 }
 
 .team-list {
   background-color: var(--main-white-color);
-}
-
-.paragraph {
-  font-size: 16px;
-  color: var(--primery-text-color);
 }
 
 .portfolio-list .portfolio-name {
@@ -178,7 +159,6 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em;
 }
 
 /* Футер */
